--- a/proddetals.html
+++ b/proddetals.html
@@ -17,7 +17,7 @@
                 <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link">HOME</a></li>
                     <li class="menu-list"><a href="proddetals.html" class="menu-link menu-link-active">PRODUCTS</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
+                    <li class="menu-list"><a href="product.html" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
                     <li class="menu-list"><a href="contact.html" class="menu-link">CONTACT</a></li>
                     <li class="menu-list">
@@ -140,8 +140,8 @@
                         </div>
                         <div class="suscribe">
                             <form>
-                                <input type="email" placeholder="your email address">
-                                <button type="submit" class="button-products"></button>
+                                <input type="email" placeholder="your email address" style="width: 360px">
+                                <button type="submit"></button>
                             </form>
                         </div>
                     </div>
