--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                 <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link">HOME</a></li>
                     <li class="menu-list"><a href="proddetals.html" class="menu-link">PRODUCTS</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
+                    <li class="menu-list"><a href="product.html" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
                     <li class="menu-list"><a href="contact.html" class="menu-link menu-link-active">CONTACT</a></li>
                     <li class="menu-list">
