edit history page

--- a/product.html
+++ b/product.html
@@ -43,15 +43,19 @@
                 </ul>
             </div>
 
-            <div class="content-history-tovar">
+            <div class="content-history-tovar padding-site">
             <div class="slider-history">
                     <div class="slider-left">
                         <div class="slider-left-img"><img src="img/slider-detals.jpg" alt="Stul"></div>
-                        <div class="slider-left-bottom"><img src="img/slider-detal1.jpg" alt="Stul">
-                        <img src="img/slider-detal2.jpg" alt="Stul">
-                        <img src="img/slider-detal3.jpg" alt="Stul"></div>
+                        <div class="slider-left-bottom"><img src="img/slider-detals1.png" alt="Stul">
+                        <img src="img/slider-detals2.png" alt="Stul">
+                        <img src="img/slider-detals3.png" alt="Stul"></div>
                     </div>
-                    <div class="slider-right"></div>
+                    <div class="slider-right"><p>The majesty of Mountains - Ugmonk style.
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+ et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+ </p></div>
             </div>
             <div class="related-products">
                 <div class="related-products-text">
