add menu products fix bugs
add icomoon social
fix footer
fix header

--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,14 @@
     <div class="container">
         <div class="hero-back padding-site">
             <div class="header">
-                <a href="#"><img src="img/logo.svg" alt="logo"></a>
+                <a href="#"><img src="img/logo.svg" alt="logo" class="logo"></a>
                 <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link">HOME</a></li>
                     <li class="menu-list"><a href="proddetals.html" class="menu-link">PRODUCTS</a></li>
                     <li class="menu-list"><a href="product.html" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
                     <li class="menu-list"><a href="contact.html" class="menu-link menu-link-active">CONTACT</a></li>
-                    <li class="menu-list">
+                    <li class="menu-list logo">
                         <a href="#" class="menu-link" style="border:none"><img src="img/search.svg" alt="search"></a>
                     </li>
                 </ul>
@@ -113,8 +113,11 @@
                 </div>
                 <div class="footer">
                     <div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
-                    <div class="socialimg">
-                        <a href="#" class="soc"><img src="img/social-links.png" alt="social"></a>
+                     <div class="socialimg">
+                        <a href="#" class="icon-facebook2"></a>
+                        <a href="#" class="icon-twitter"></a>
+                        <a href="#" class="icon-google-plus3"></a>
+                        <a href="#" class="icon-pinterest"></a>
                     </div>
                     <div class="terms"><a href="#" class="link link-active">Terms &amp; Conditions</a> / <a href="#" class="link link-active">Privacy policy &amp; Cookies</a></div>
                 </div>
