--- a/proddetals.html
+++ b/proddetals.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="hero-back-products padding-site">
             <div class="header">
-                <a href="#"><img src="img/logo.svg" alt="logo"></a>
+                <a href="#"><img src="img/logo.svg" alt="logo" class="logo"></a>
                 <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link">HOME</a></li>
                     <li class="menu-list"><a href="proddetals.html" class="menu-link menu-link-active">PRODUCTS</a></li>
@@ -29,6 +29,16 @@
                 <p>Our Products Range</p>
             </div>
         </div>
+        <div class="menu-products padding-site">
+                <ul class="menu-history-table clearfix">
+                    <li class="menu-history-list"><a href="#" class="menu-link menu-link-active">all</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link">home</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link">office</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link">furniture</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link">modern</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link">classic</a></li>
+                </ul>
+            </div>
         <div class="content-catalog">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-4">
@@ -148,8 +158,11 @@
                 </div>
                 <div class="footer">
                     <div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
-                    <div class="socialimg">
-                        <a href="#" class="soc"><img src="img/social-links.png" alt="social"></a>
+                     <div class="socialimg">
+                        <a href="#" class="icon-facebook2"></a>
+                        <a href="#" class="icon-twitter"></a>
+                        <a href="#" class="icon-google-plus3"></a>
+                        <a href="#" class="icon-pinterest"></a>
                     </div>
                     <div class="terms"><a href="#" class="link link-active">Terms &amp; Conditions</a> / <a href="#" class="link link-active">Privacy policy &amp; Cookies</a></div>
                 </div>
