--- a/product.html
+++ b/product.html
@@ -7,8 +7,7 @@
     <title>Our Products Range</title>
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
-</head>
-
+    <link rel="stylesheet" href="css/fontsico.css"> </head>
 
 <body>
     <div class="container">
@@ -25,12 +24,9 @@
                         <a href="#" class="menu-link" style="border:none"><img src="img/search.svg" alt="search"></a>
                     </li>
                 </ul>
-
             </div>
-
         </div>
         <div class="content-history">
-
             <div class="menu-history">
                 <ul class="menu-history-table clearfix">
                     <li class="menu-history-list"><a href="#" class="menu-link menu-link-active-history">all</a></li>
@@ -39,45 +35,41 @@
                     <li class="menu-history-list"><a href="#" class="menu-link">furniture</a></li>
                     <li class="menu-history-list"><a href="#" class="menu-link">modern</a></li>
                     <li class="menu-history-list"><a href="#" class="menu-link">classic</a></li>
-
                 </ul>
             </div>
-
             <div class="content-history-tovar padding-site">
-            <div class="slider-history">
+                <div class="slider-history-block">
                     <div class="slider-left">
                         <div class="slider-left-img"><img src="img/slider-detals.jpg" alt="Stul"></div>
-                        <div class="slider-left-bottom"><img src="img/slider-detals1.png" alt="Stul">
-                        <img src="img/slider-detals2.png" alt="Stul">
-                        <img src="img/slider-detals3.png" alt="Stul"></div>
+                        <div class="slider-left-bottom"><img src="img/slider-detals1.png" alt="Stul"> <img src="img/slider-detals2.png" alt="Stul"> <img src="img/slider-detals3.png" alt="Stul"></div>
                     </div>
-                    <div class="slider-right"><p>The majesty of Mountains - Ugmonk style.
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
- et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
- </p></div>
-            </div>
-            <div class="related-products">
-                <div class="related-products-text">
-                    <div class="menu-cont clearfix">
-                        <ul class="menu-cont-list2">
-                            <li class="menunewfcontent"><a href="#" class="menu-link-fea link-active">Trending Products</a></li>
-                        </ul> <a href="#" class="explore-all link-active">explore all ></a>
+                    <div class="slider-right-history">
+                        <h2 class="slider-h2-history">Fishnet Chair</h2>
+                        <p class="slider-hotdeal-history">hot deal</p>
+                        <h1 class="slider-history-h1">$ 36.7/<span class="price">sq</span></h1> <a href="#" class="button-history">Order Us ></a>
+                        <p class="slider-content-history">The majesty of Mountains - Ugmonk style. <br><br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore <br><br> et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. </p>
                     </div>
                 </div>
-                <div class="content-catalog">
-                    <div class="row align-items-center justify-content-center">
-                        <div class="col-md-4">
-                            <a href="#"><img src="img/product-11.jpg" alt=""></a>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="#"><img src="img/product-21.jpg" alt=""></a>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="#"><img src="img/product-31.jpg" alt=""></a>
+                <div class="related-products">
+                    <div class="related-products-text">
+                        <div class="menu-cont clearfix">
+                            <ul class="menu-cont-list2">
+                                <li class="menunewfcontent"><a href="#" class="menu-link-fea link-active">Related Products</a></li>
+                            </ul> <a href="#" class="explore-all link-active">explore all ></a> </div>
+                    </div>
+                    <div class="content-catalog">
+                        <div class="row align-items-center justify-content-center">
+                            <div class="col-md-4">
+                                <a href="#"><img src="img/product-11.jpg" alt=""></a>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="#"><img src="img/product-21.jpg" alt=""></a>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="#"><img src="img/product-31.jpg" alt=""></a>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
@@ -140,8 +132,11 @@ Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
                 </div>
                 <div class="footer">
                     <div class="copyr"> &#169;&nbsp;Copyright - INTERIOR 2016. All Rights Reserved.</div>
-                    <div class="socialimg">
-                        <a href="#" class="soc"><img src="img/social-links.png" alt="social"></a>
+                     <div class="socialimg">
+                        <a href="#" class="icon-facebook2"></a>
+                        <a href="#" class="icon-twitter"></a>
+                        <a href="#" class="icon-google-plus3"></a>
+                        <a href="#" class="icon-pinterest"></a>
                     </div>
                     <div class="terms"><a href="#" class="link link-active">Terms &amp; Conditions</a> / <a href="#" class="link link-active">Privacy policy &amp; Cookies</a></div>
                 </div>
