add refresh fix bags

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
                     <li class="menu-list"><a href="contact.html" class="menu-link">CONTACT</a></li>
                     <li class="menu-list logo">
-                        <a href="#" class="menu-link" style="border:none"><img src="img/search.svg" alt="search""></a>
+                        <a href="#" class="menu-link" style="border:none"><img src="img/search.svg" alt="search"></a>
                     </li>
                 </ul>
             </div>
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </div>
-        <div class="slider-text4 padding-site3">
+        <div class="slider-text4 padding-site">
             <p class="mobile-app">mobile app</p>
             <h2 class="slider-h2-4">Find. Follow. Favorite.</h2>
             <p class="slider-content-4 clearfix">Save your favorites and share your style.</p>
