--- a/proddetals.html
+++ b/proddetals.html
@@ -31,15 +31,16 @@
         </div>
         <div class="menu-products padding-site">
                 <ul class="menu-history-table clearfix">
-                    <li class="menu-history-list"><a href="#" class="menu-link menu-link-active">all</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">home</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">office</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">furniture</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">modern</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">classic</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link-dop menu-link-active-dop">all</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link-dop">home</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link-dop">office</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link-dop">furniture</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link-dop">modern</a></li>
+                    <li class="menu-history-list"><a href="#" class="menu-link-dop">classic</a></li>
                 </ul>
+              
             </div>
-        <div class="content-catalog">
+        <div class="content-catalog padding-site">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-4">
                     <a href="#"><img src="img/product-11.jpg" alt=""></a>
@@ -85,6 +86,7 @@
                 </div>
             </div>
         </div>
+        <div class="refresh"><a href="#" class="menu-link refresh"><span class="icon-loop2 rerfesh"></span></a></div>
         <div class="promo2">
             <div class="promo-left2">
                 <div class="promo-text">
