--- a/product.html
+++ b/product.html
@@ -28,14 +28,16 @@
         </div>
         <div class="content-history">
             <div class="menu-history">
-                <ul class="menu-history-table clearfix">
-                    <li class="menu-history-list"><a href="#" class="menu-link menu-link-active-history">all</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">home</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">office</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">furniture</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">modern</a></li>
-                    <li class="menu-history-list"><a href="#" class="menu-link">classic</a></li>
-                </ul>
+                <div class="menu-history-block">
+                    <ul class="menu-history-table">
+                        <li class="menu-history-list"><a href="#" class="menu-link-dop menu-link-active-history">all</a></li>
+                        <li class="menu-history-list"><a href="#" class="menu-link-dop">home</a></li>
+                        <li class="menu-history-list"><a href="#" class="menu-link-dop">office</a></li>
+                        <li class="menu-history-list"><a href="#" class="menu-link-dop">furniture</a></li>
+                        <li class="menu-history-list"><a href="#" class="menu-link-dop">modern</a></li>
+                        <li class="menu-history-list"><a href="#" class="menu-link-dop">classic</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="content-history-tovar padding-site">
                 <div class="slider-history-block">
@@ -47,98 +49,101 @@
                         <h2 class="slider-h2-history">Fishnet Chair</h2>
                         <p class="slider-hotdeal-history">hot deal</p>
                         <h1 class="slider-history-h1">$ 36.7/<span class="price">sq</span></h1> <a href="#" class="button-history">Order Us ></a>
-                        <p class="slider-content-history">The majesty of Mountains - Ugmonk style. <br><br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore <br><br> et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. </p>
+                        <p class="slider-content-history">The majesty of Mountains - Ugmonk style.
+                            <br>
+                            <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                            <br>
+                            <br> et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            <br>
+                            <br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. </p>
                     </div>
                 </div>
                 <div class="related-products">
                     <div class="related-products-text">
-                        <div class="menu-cont clearfix">
-                            <ul class="menu-cont-list2">
-                                <li class="menunewfcontent"><a href="#" class="menu-link-fea link-active">Related Products</a></li>
-                            </ul> <a href="#" class="explore-all link-active">explore all ></a> </div>
-                    </div>
-                    <div class="content-catalog">
-                        <div class="row align-items-center justify-content-center">
-                            <div class="col-md-4">
-                                <a href="#"><img src="img/product-11.jpg" alt=""></a>
-                            </div>
-                            <div class="col-md-4">
-                                <a href="#"><img src="img/product-21.jpg" alt=""></a>
-                            </div>
-                            <div class="col-md-4">
-                                <a href="#"><img src="img/product-31.jpg" alt=""></a>
+                        <div class="menu-cont-history"> <a href="#" class="menu-link-fea link-active hover">Related Products</a><a href="#" class="explore-all-history link-active hover">explore all ></a> </div>
+                        <div class="content-catalog-history">
+                            <div class="row align-items-center justify-content-center">
+                                <div class="col-md-4">
+                                    <a href="#"><img src="img/product-11.jpg" alt=""></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#"><img src="img/product-21.jpg" alt=""></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#"><img src="img/product-31.jpg" alt=""></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="clr"></div>
-        <div class="footerblock">
-            <div class="footermenu">
-                <div class="menufooter">
-                    <div class="left-col">
-                        <div class="h-footer-menu">
-                            <p>Contact Us</p>
+            <div class="clr"></div>
+            <div class="footerblock">
+                <div class="footermenu">
+                    <div class="menufooter">
+                        <div class="left-col">
+                            <div class="h-footer-menu">
+                                <p>Contact Us</p>
+                            </div>
+                            <div class="footer-p-left1">
+                                <p>132A Bridge Road Richmond VIC Australia.</p>
+                            </div>
+                            <div class="footer-p-left1">
+                                <p>Talk to us on 1300 132 info@interior.com</p>
+                            </div>
                         </div>
-                        <div class="footer-p-left1">
-                            <p>132A Bridge Road Richmond VIC Australia.</p>
+                        <div class="center-col">
+                            <div class="h-footer-menu">
+                                <p>Useful Information</p>
+                            </div>
+                            <div class="center-menu1">
+                                <ul>
+                                    <li><a href="#" class="center-menu1 link-active">Sales&nbsp;terms</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#" class="center-menu1 link-active">Customer&nbsp;care</a> </li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#" class="center-menu1 link-active">Delivery</a></li>
+                                </ul>
+                            </div>
+                            <div class="center-menu2">
+                                <ul>
+                                    <li><a href="#" class="center-menu2 link-active">Architect&nbsp;accountss</a> </li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#" class="center-menu2 link-active">Careers</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#" class="center-menu2 link-active">Exchanges&nbsp;&amp;&nbsp;return</a> </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="footer-p-left1">
-                            <p>Talk to us on 1300 132 info@interior.com</p>
+                        <div class="right-col-history">
+                            <div class="h-footer-menu">
+                                <p>Let’s Stay in Touch!</p>
+                            </div>
+                            <div class="text-right-col">
+                                <p>Suscribe to know about our latest news, products and special offers just for suscribers.</p>
+                            </div>
+                            <div class="suscribe">
+                                <form>
+                                    <input type="email" placeholder="your email address" style="width: 360px">
+                                    <button type="submit"></button>
+                                </form>
+                            </div>
                         </div>
                     </div>
-                    <div class="center-col">
-                        <div class="h-footer-menu">
-                            <p>Useful Information</p>
+                    <div class="footer">
+                        <div class="copyr"> &#169;&nbsp;Copyright - INTERIOR 2016. All Rights Reserved.</div>
+                        <div class="socialimg">
+                            <a href="#" class="icon-facebook2"></a>
+                            <a href="#" class="icon-twitter"></a>
+                            <a href="#" class="icon-google-plus3"></a>
+                            <a href="#" class="icon-pinterest"></a>
                         </div>
-                        <div class="center-menu1">
-                            <ul>
-                                <li><a href="#" class="center-menu1 link-active">Sales&nbsp;terms</a></li>
-                            </ul>
-                            <ul>
-                                <li><a href="#" class="center-menu1 link-active">Customer&nbsp;care</a> </li>
-                            </ul>
-                            <ul>
-                                <li><a href="#" class="center-menu1 link-active">Delivery</a></li>
-                            </ul>
-                        </div>
-                        <div class="center-menu2">
-                            <ul>
-                                <li><a href="#" class="center-menu2 link-active">Architect&nbsp;accountss</a> </li>
-                            </ul>
-                            <ul>
-                                <li><a href="#" class="center-menu2 link-active">Careers</a></li>
-                            </ul>
-                            <ul>
-                                <li><a href="#" class="center-menu2 link-active">Exchanges&nbsp;&amp;&nbsp;return</a> </li>
-                            </ul>
-                        </div>
+                        <div class="terms"><a href="#" class="link link-active">Terms &amp; Conditions</a> / <a href="#" class="link link-active">Privacy policy &amp; Cookies</a></div>
                     </div>
-                    <div class="right-col-history">
-                        <div class="h-footer-menu">
-                            <p>Let’s Stay in Touch!</p>
-                        </div>
-                        <div class="text-right-col">
-                            <p>Suscribe to know about our latest news, products and special offers just for suscribers.</p>
-                        </div>
-                        <div class="suscribe">
-                            <form>
-                                <input type="email" placeholder="your email address" style="width: 360px">
-                                <button type="submit"></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer">
-                    <div class="copyr"> &#169;&nbsp;Copyright - INTERIOR 2016. All Rights Reserved.</div>
-                     <div class="socialimg">
-                        <a href="#" class="icon-facebook2"></a>
-                        <a href="#" class="icon-twitter"></a>
-                        <a href="#" class="icon-google-plus3"></a>
-                        <a href="#" class="icon-pinterest"></a>
-                    </div>
-                    <div class="terms"><a href="#" class="link link-active">Terms &amp; Conditions</a> / <a href="#" class="link link-active">Privacy policy &amp; Cookies</a></div>
                 </div>
             </div>
         </div>
